<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5sp"
    android:background="@drawable/burger1"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="1sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#ffffff"
            android:textSize="1sp"
            android:layout_gravity="left"
            android:layout_margin="10sp"/>
        <TextView
            android:layout_width="50sp"
            android:layout_height="30sp"
            android:id="@+id/totalTV"
            android:textColor="#ffffff"
            android:textSize="25sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DOR'S BURGER"
            android:textSize="50sp"
            android:gravity="center"
            android:layout_marginTop="10sp"
            android:textStyle="bold"
            android:textColor="#CA9122"
            android:fontFamily="cursive"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#9C0D0D"
                android:textSize="25sp"
                android:layout_margin="10sp"
                android:textStyle="bold"
                android:text="@string/prices_list_main"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_margin="10sp"
                android:text="@string/burger_price_main1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_margin="10sp"
                android:text="@string/drink_price_main1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_margin="10sp"
                android:text="@string/addition_price_main"/>

        </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_number"
        android:id="@+id/orderNumber"
        android:textColor="#9C0D0D"
        android:textSize="25sp"
        android:layout_margin="10sp"
        android:textStyle="bold"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/delORpick">

        <RadioButton
            android:id="@+id/deliveryRadio"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_shape"
            android:buttonTint="#3951DF"
            android:gravity="center"
            android:layout_margin="5sp"
            android:text="@string/delivery_main"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <RadioButton
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/pickup_main"
            android:textSize="16sp"
            android:layout_margin="5sp"
            android:buttonTint="#3951DF"
            android:textColor="#ffffff"
            android:background="@drawable/input_shape"
            android:gravity="center"
            android:id="@+id/pickupRadio"/>
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_city"
        android:layout_width="130sp"
        android:layout_height="35sp"
        android:entries="@array/del_city"
        android:popupBackground="#ffffff"
        android:background="@drawable/input_shape"
        android:layout_margin="15sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/city_tv"
            android:layout_width="130sp"
            android:layout_height="35sp"
            android:hint="@string/enter_city"
            android:textColorHint="#ffffff"
            android:background="@drawable/input_shape"
            android:textSize="18sp"
            android:layout_margin="5sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/street_tv"
            android:layout_width="130sp"
            android:layout_height="35sp"
            android:hint="@string/enter_street"
            android:textColorHint="#ffffff"
            android:layout_margin="5sp"
            android:textSize="18sp"
            android:background="@drawable/input_shape"
            android:gravity="center"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drink_main"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_margin="10sp"
                android:textColor="#9C0D0D"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layout_drinks"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:layout_width="250sp"
            android:layout_height="40sp"
            android:hint="@string/enter_nums_drink"
            android:textColorHint="#ffffff"
            android:background="@drawable/input_shape"
            android:textSize="18sp"
            android:layout_margin="6sp"
            android:gravity="center"
            android:inputType="number"
            android:id="@+id/enter_drinks_et"/>
        <Button
            android:layout_width="45sp"
            android:layout_height="45sp"
            android:layout_margin="6sp"
            android:text="@string/ok_btn"
            android:textSize="15sp"
            android:textColor="#ffffff"
            android:background="@drawable/press_ok_btn"
            android:id="@+id/ok_btn_drink_main"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/drink_layout"/>

    </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adds_main"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="#9C0D0D"
                android:layout_margin="10sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layout_adds">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <EditText
                android:layout_width="280sp"
                android:layout_height="40sp"
                android:hint="@string/enter_nums_adds"
                android:textColorHint="#ffffff"
                android:background="@drawable/input_shape"
                android:textSize="18sp"
                android:layout_margin="6sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/enter_adds_et"/>

            <Button
                android:id="@+id/ok_btn_add_main"
                android:layout_width="45sp"
                android:layout_height="45sp"
                android:layout_margin="6sp"
                android:background="@drawable/press_ok_btn"
                android:text="@string/ok_btn"
                android:textColor="#ffffff"
                android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/add_layout"/>
        </LinearLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_meal_main"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_margin="10sp"
            android:textColor="#9C0D0D"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/withoutCheckbox">
        <CheckBox
            android:layout_width="115sp"
            android:layout_height="wrap_content"
            android:text="@string/tomato_main"
            android:buttonTint="#3951DF"
            android:background="@drawable/input_shape"
            android:textColor="#ffffff"
            android:layout_margin="5sp"
            android:id="@+id/withTomato"/>
        <CheckBox
            android:layout_width="105sp"
            android:layout_height="wrap_content"
            android:text="@string/onion_main"
            android:buttonTint="#3951DF"
            android:background="@drawable/input_shape"
            android:textColor="#ffffff"
            android:layout_margin="5sp"
            android:id="@+id/withOnion"/>
        <CheckBox
            android:layout_width="110sp"
            android:layout_height="wrap_content"
            android:text="@string/lettuce_main"
            android:buttonTint="#3951DF"
            android:layout_margin="5sp"
            android:background="@drawable/input_shape"
            android:textColor="#ffffff"
            android:id="@+id/withLettuce"/>
        <CheckBox
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:text="@string/pickle_main"
            android:buttonTint="#3951DF"
            android:layout_margin="5sp"
            android:background="@drawable/input_shape"
            android:textColor="#ffffff"

            android:id="@+id/withPickle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_main"
            android:textSize="20sp"

            android:background="@drawable/press_apply_btn"
            android:id="@+id/applyOrderBtn"/>
    </LinearLayout>
</LinearLayout>
    </ScrollView>
</LinearLayout>